# QtProjectWithCMake

./: .gitignore  README.md
BTDeco_pro/BTDeco_pro/: BTDeco_pro.pro  CMakeLists.txt
BTDeco_pro/BTDeco_pro/form/ui/: mainwindow.ui  mainwindow_copy.ui
BTDeco_pro/BTDeco_pro/include/: btdLogger.h  mainwindow.h
BTDeco_pro/BTDeco_pro/src/: btdLogger.cpp  main.cpp  mainwindow.cpp
DrawTool_GraphView/: DrawTool_GraphView.pro  mainwindow.cpp  mainwindow.h  qwgraphicsview.cpp
LightMusicPlayer/LightMusicPlayer/: CMakeLists.txt
LightMusicPlayer/LightMusicPlayer/form/ui/: mainWidget.ui
LightMusicPlayer/LightMusicPlayer/src/: MainWidget.cpp  main.cpp
Qt5Learning/7-Graph/7.1_Qpainter/QpainterLearn/: QpainterLearn.pro  main.cpp  widget.cpp  widget.h
Qt5Learning/7-Graph/7.1_Qpainter/build-QpainterLearn-Desktop_Qt_5_12_12_GCC_64bit-Debug/: Makefile  QpainterLearn  moc_widget.cpp  qmake_qmake_qm_files.qrc  qrc_imgres.cpp  qrc_imgresource.cpp  qrc_imgsrc.cpp  qrc_qmake_qmake_qm_files.cpp
Qt5Learning/7-Graph/build-graphGradient-Desktop_Qt_5_12_12_GCC_64bit-Debug/: Makefile  graphGradient  moc_widget.cpp
Qt5Learning/7-Graph/graphGradient/: widget.cpp  widget.h
Qt5Learning/DrawTool_GraphView/: mainwindow.ui  qwgraphicsview.h
Qt5Learning/promotedWidgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui  promotedWidgets.pro  qwgraphicsview.h
Qt5Learning/qtSample_4_4/: widget.cpp  widget.h  widget.ui
Qt5Learning/qtSample_4_5/: widget.cpp  widget.h  widget.ui
Qt5Learning/qtSample_4_6/: widget.cpp  widget.h  widget.ui
Qt5Learning/qtSample_4_7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt5Learning/qtSample_4_8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Qt5Learning/standarDialogs_6_1/: dialog.cpp  dialog.h  dialog.ui
mainwindow/: CMakeLists.txt  run.sh
mainwindow/source/: CMakeLists.txt  \  main.cpp
mainwindow/source/colorswatch/: CMakeLists.txt
mainwindow/source/mainwindow/: CMakeLists.txt  mainwindow.cpp
mainwindow/source/qrc/: CMakeLists.txt
mainwindow/source/toolbar/: CMakeLists.txt
mypainter/: CMakeLists.txt  mypainter.pro
mypainter/source/: CMakeLists.txt  main.cc
mypainter/source/gui/: CMakeLists.txt
mypainter/source/gui/qrc/: CMakeLists.txt  mainwindow.qrc
mypainter/source/gui/ui/: CMakeLists.txt  mainform.ui
mypainter/source/mainwindow/: CMakeLists.txt  mainwindow.cc
mypainter/source/painter/: CMakeLists.txt  painter.cc  painter.h
openAIServer/: CMakeLists.txt
openAIServer/cmake/: json.cmake  macrofunc.cmake  opendb.cmake  spdlog2.cmake
openAIServer/source/: CMakeLists.txt  main.cpp
openAIServer/source/openAI/: CMakeLists.txt  openAI.h
openAIServer/source/openAI/Completion/: CMakeLists.txt  completionText.cpp  completionText.h
openAIServer/source/openAI/Deployment/: CMakeLists.txt
openAIServer/source/openAI/Edit/: CMakeLists.txt
openAIServer/source/openAI/Embedding/: CMakeLists.txt
openAIServer/source/openAI/Engine/: CMakeLists.txt
openAIServer/source/openAI/ErrorObject/: CMakeLists.txt
openAIServer/source/openAI/File/: CMakeLists.txt
openAIServer/source/openAI/FineTune/: CMakeLists.txt
openAIServer/source/openAI/Image/: CMakeLists.txt
openAIServer/source/openAI/Model/: CMakeLists.txt
openAIServer/source/openAI/Moderation/: CMakeLists.txt
openAIServer/source/qrc/: CMakeLists.txt
openAIServer/source/robotServer/: CMakeLists.txt  robotserver.h
openAIServer/source/ui/: CMakeLists.txt
openAIServer/unitest/: CMakeLists.txt
promotedWidgets/: qwgraphicsview.cpp
qtSample_4_8/: mainwindow.ui
